update play billing documentation

--- a/plugins/google-play-services/billing/contact.html
+++ b/plugins/google-play-services/billing/contact.html
@@ -114,33 +114,33 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="incrementing_event.html">
+                            <a class="nav-link inactive" href="querying_product_details.html">
                                 Querying Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_events.html">
+                            <a class="nav-link inactive" href="launch_billing_flow.html">
                                 Launch Billing Flow
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_events.html">
+                            <a class="nav-link inactive" href="check_for_purchases.html">
                                 Check for Purchases
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_events.html">
+                            <a class="nav-link inactive" href="query_purchase_history.html">
                                 Query Purchase History
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_events.html">
-                                Show In-App messages
+                            <a class="nav-link inactive" href="show_inapp_messages.html">
+                                Show In-App Messages
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_events.html">
-                                Is Feature Supported
+                            <a class="nav-link inactive" href="supporting_nodes.html">
+                                Supporting Nodes
                             </a>
                         </li>
                         <hr />
@@ -148,33 +148,23 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event.html">
+                            <a class="nav-link inactive" href="product_details.html">
                                 Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
+                            <a class="nav-link inactive" href="purchase.html">
                                 Purchase
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
+                            <a class="nav-link inactive" href="purchase_history_record.html">
                                 Purchase History Record
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
-                                Product Type
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
-                                Feature Type
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
-                                Billing Response Code
+                            <a class="nav-link inactive" href="enumerations.html">
+                                Enumerations
                             </a>
                         </li>
                         <hr />
