--- a/plugins/google-play-services/billing/getting_started.html
+++ b/plugins/google-play-services/billing/getting_started.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Events</title>
+    <title>UE Plugin | Billing</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -109,18 +109,38 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="getting_started.html">
+                            <a class="nav-link active" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="incrementing_event.html">
-                                Incrementing an Event
+                            <a class="nav-link inactive" href="querying_product_details.html">
+                                Querying Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="fetch_events.html">
-                                Loading Events
+                            <a class="nav-link inactive" href="launch_billing_flow.html">
+                                Launch Billing Flow
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="check_for_purchases.html">
+                                Check for Purchases
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="query_purchase_history.html">
+                                Query Purchase History
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="show_inapp_messages.html">
+                                Show In-App Messages
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="supporting_nodes.html">
+                                Supporting Nodes
                             </a>
                         </li>
                         <hr />
@@ -128,13 +148,23 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event.html">
-                                Event
+                            <a class="nav-link inactive" href="product_details.html">
+                                Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
-                                Event Error
+                            <a class="nav-link inactive" href="purchase.html">
+                                Purchase
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="purchase_history_record.html">
+                                Purchase History Record
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="enumerations.html">
+                                Enumerations
                             </a>
                         </li>
                         <hr />
@@ -154,85 +184,71 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Loading Events</h1>
+                    <h1 class="h2 text-white-shadow">Getting Started</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">
-                            This is an asynchronous function which allows you fetch <a href="event.html">Google Play Events</a> in the Cloud.
-                            You can make use of this to create personalized experiences tailored to individual players.
-                        </p>
-                        <p class="content">
-                            The parameters include whether or not to clear the local cache and the Event ID's to fetch.</br>
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Once the asynchronous operation has completed, one of two delegates will be called to handle
-                            the success and failure situations.
-                        </p>
+                        <ol class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Purchase the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Purchase the plugin on the Official Unreal Engine Marketplace.
+                            </p>
+                            <li class="list-group-item">
+                                Install the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
+                                Go to the Library tab and find the plugin and add it to the engine.
+                            </p>
+                            <li class="list-group-item">
+                                Enable Play Services Billing Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In Unreal Engine, the plugin will be available in the plugins section.</br>
+                                Go to <span style="font-weight: 500">Settings</span> -> <span
+                                    style="font-weight: 500">Plugins</span> -> Search for "<span
+                                    style="font-weight: 500">Play Services Billing</span>" and ensure it is enabled.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/Billing/Billing_Plugin_Enabled.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Enable Google Play Support
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Enable "Google Play Support" and ensure your "Games App ID" is set appropriately for your app.</br>
+                                Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> ->
+                                <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span
+                                    style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and
+                                enable: "<span style="font-weight: 500; white-space: nowrap;">Enable Google Play
+                                    Support</span>".
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/Events/Events_Plugin_Config.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Login to Google Play Services
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                On Game startup, add the Unreal Engine provided node (not provided by this plugin) to
+                                login to Google Play Services.</br>
+                                The node is called "<span style="font-weight: 500">Show External Login UI</span>".
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/UE_Blueprint_GoogleLogin.png">
+                                </div>
+                            </div>
+                        </ol>
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Events/Events_Plugin_Load.png" style="max-width: 70%;">
-                    </div>
-                </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                    <span class="badge badge-primary">1</span>
-                    <div class="info">
-                        <p class="content">
-                            <b>Clear Local Cache</b>
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            A boolean value to indicate whether or not to clear the local cache on the Android device.</br>
-                            When set to true, it will fetch from the cloud, potentially taking longer to complete.
-                            When false, will be much faster but will access the locally cached version if its there.
-                        </p>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">2</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>Event Ids</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                An array of Event ID's to fetch. If an empty array is provided, it will fetch all Events.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">3</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>On Success</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called when the Events have successfully been retrieved.
-                                The delegate will produce an Array of <a href="event.html">Events</a> for you to use.</br>
-                                You can simply click and drag this pin to create a custom event.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">4</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>On Failure</b>
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called if there is an error fetching the events.
-                                The delegate will produce an <a href="event_error.html">Event Error type</a> for the developer to handle appropriately.
-                                You can simply click and drag this pin to create a custom event.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="margin-bottom: 300px">
+                <div style="margin-bottom: 150px">
                 </div>
             </main>
         </div>
