--- a/plugins/google-play-services/billing/launch_billing_flow.html
+++ b/plugins/google-play-services/billing/launch_billing_flow.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Events</title>
+    <title>UE Plugin | Billing</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -114,13 +114,33 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="incrementing_event.html">
-                                Incrementing an Event
+                            <a class="nav-link inactive" href="querying_product_details.html">
+                                Querying Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="fetch_events.html">
-                                Loading Events
+                            <a class="nav-link active" href="launch_billing_flow.html">
+                                Launch Billing Flow
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="check_for_purchases.html">
+                                Check for Purchases
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="query_purchase_history.html">
+                                Query Purchase History
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="show_inapp_messages.html">
+                                Show In-App Messages
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="supporting_nodes.html">
+                                Supporting Nodes
                             </a>
                         </li>
                         <hr />
@@ -128,13 +148,23 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event.html">
-                                Event
+                            <a class="nav-link inactive" href="product_details.html">
+                                Product Details
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
-                                Event Error
+                            <a class="nav-link inactive" href="purchase.html">
+                                Purchase
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="purchase_history_record.html">
+                                Purchase History Record
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="enumerations.html">
+                                Enumerations
                             </a>
                         </li>
                         <hr />
@@ -154,16 +184,15 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Loading Events</h1>
+                    <h1 class="h2 text-white-shadow">Launch Billing Flow</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an asynchronous function which allows you fetch <a href="event.html">Google Play Events</a> in the Cloud.
-                            You can make use of this to create personalized experiences tailored to individual players.
+                            This is an asynchronous function which enables you to Launch a Google Play Billing window (powered by Google) for a purchase.
                         </p>
                         <p class="content">
-                            The parameters include whether or not to clear the local cache and the Event ID's to fetch.</br>
+                            The parameters include the Product ID (from the Google Play Console), Product Type, whether or not it is a personalised offer and optionally an Offer Token.</br>
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             Once the asynchronous operation has completed, one of two delegates will be called to handle
@@ -173,20 +202,20 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Events/Events_Plugin_Load.png" style="max-width: 70%;">
+                        <img src="../../../images/Billing/Billing_Plugin_LaunchBillingFlow.png" style="max-width: 70%;">
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                    <span class="badge badge-primary">1</span>
-                    <div class="info">
-                        <p class="content">
-                            <b>Clear Local Cache</b>
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            A boolean value to indicate whether or not to clear the local cache on the Android device.</br>
-                            When set to true, it will fetch from the cloud, potentially taking longer to complete.
-                            When false, will be much faster but will access the locally cached version if its there.
-                        </p>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">1</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>Product Id</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                The Product ID of the product to purchase. This ID can be sourced from the Google Play Console.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div style="padding-top: 30px">
@@ -194,10 +223,10 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>Event Ids</b>
+                                <b>Product Type</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                An array of Event ID's to fetch. If an empty array is provided, it will fetch all Events.
+                                <a href="enumerations.html">Product Type</a> can either be Subscription or InApp products.
                             </p>
                         </div>
                     </div>
@@ -207,12 +236,11 @@
                         <span class="badge badge-primary">3</span>
                         <div class="info">
                             <p class="content">
-                                <b>On Success</b>
+                                <b>Is Offer Personalised</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called when the Events have successfully been retrieved.
-                                The delegate will produce an Array of <a href="event.html">Events</a> for you to use.</br>
-                                You can simply click and drag this pin to create a custom event.
+                                Indicate whether or not the offer is personalised. </br>
+                                You must consult Art. 6 (1) (ea) CRD of the Consumer Rights Directive (<a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:02011L0083-20220528" target="_blank">2011/83/EU</a>) to determine if the price you are offering to users is personalized.
                             </p>
                         </div>
                     </div>
@@ -222,11 +250,41 @@
                         <span class="badge badge-primary">4</span>
                         <div class="info">
                             <p class="content">
+                                <b>Offer Token</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                A Token retrieved when <a href="querying_product_details.html">Querying Product Details</a> which would indicate a specific offer on a Subscription's base plan. </br>
+                                This is not required for consumable/non-consumable in app purchases. </br>
+                                You can use the <a href="supporting_nodes.html">Get Subscription Offer Token</a> blueprint node to extract the desired offer token.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">5</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>On Success</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                A delegate that will be called when the player has successfully purchased the product.
+                                The delegate will produce a <a href="purchase.html">Purchase</a> object for you to use. </br>
+                                You can simply click and drag this pin to create a custom event.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">6</span>
+                        <div class="info">
+                            <p class="content">
                                 <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called if there is an error fetching the events.
-                                The delegate will produce an <a href="event_error.html">Event Error type</a> for the developer to handle appropriately.
+                                A delegate that will be called if there is an error launcching the billing flow.
+                                The delegate will produce a <a href="enumerations.html">Billing Response Code</a> and debug message for the developer to handle appropriately.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
