--- a/plugins/google-play-services/billing/purchase.html
+++ b/plugins/google-play-services/billing/purchase.html
@@ -104,7 +104,7 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="overview.html">
+                            <a class="nav-link inactive" href="overview.html">
                                 Overview
                             </a>
                         </li>
@@ -153,7 +153,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="purchase.html">
+                            <a class="nav-link active" href="purchase.html">
                                 Purchase
                             </a>
                         </li>
@@ -183,56 +183,159 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="container border-bottom"
-                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Billing Overview</h1>
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom;">
+                    <h1 class="h2 text-white-shadow">Purchase</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            <b>The Google Play Service: Billing</b>
-                        </p>
-                        <p class="content">
-                            The Google Play Billing Library is a powerful tool provided by Google Play Services that enables developers to implement in-app purchases and subscription services in their Android games. With this library, developers can monetize their games, offer premium content, and provide a seamless purchasing experience for players.
-                        </p>
-                        <ul>
-                            <li class="blue-diamond">Fetch All Product Information</li>
-                            <li class="blue-diamond">Launch the Billing Flow for your Products</li>
-                            <li class="blue-diamond">Fetch Purchase History Information</li>
-                            <li class="blue-diamond">Check if a Feature is Supported</li>
-                            <li class="blue-diamond">Handle Pending Purchases/Transactions</li>
-                            <li class="blue-diamond">Show In-App Messages (Price Change Confirmations)</li>
-                            <li class="blue-diamond">Acknowledge/Consume Purchases Automatically in Google Play</li>
-                            <li class="blue-diamond">Indicate Personalised Prices</li>
-                        </ul>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            By leveraging the capabilities of the Google Play Billing Library, developers can unlock new revenue streams, engage their player base, and create a sustainable business model for their Android games.
-                        </p>
-                    </div>
-                    <div class="info" style="margin-top: 20px">
-                        <p class="content">
-                            <b>The Unreal Engine Plugin</b>
-                        </p>
-                        <p class="content">
-                            Introducing the Unreal Engine plugin for the Billing service, a powerful tool that brings the features of <span style="font-weight: 500">Google Play Billing Version 6</span> directly to your Unreal Engine projects.
-                            This plugin is designed to expose the Billing service's functionality to blueprint scripting, simplifying the integration process for game developers.
-                        </p>
-                        <p class="content">
-                            With an intuitive and user-friendly interface seamlessly integrated into the Unreal Engine editor, connecting to the service becomes a breeze.
-                            Whether you're a seasoned Unreal Engine developer or new to the platform, our plugin empowers you to easily perform all the features provided by the Google Play Billing Library, enhancing the capabilities of your game.
+                            The Purchase struct is designed to mimic the Purchase almost exactly as provided by the Google Play Billing
+                            SDK for the Billing service.
+                            It contains various information about the the purchase of an in-app product.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Action has been taken to update Unreal Engines existing integration with the older billing library to adhere to any of the breaking changes from the library update.
-                            <span style="font-weight: 500">Billing functionality implemented in your project must therefore only interact with this plugin's billing functionality and not Unreal Engine provided Google Play billing services.</span>
+                            The Purchase struct contains an additional struct to mimic the libraries representation of information and represent the purchases information.
+                            The additiona struct is FAccountIdentifiers.
                         </p>
                     </div>
-                    <!-- <div class="info" style="margin-top: 20px"> -->
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Billing/Billing_Plugin_AllNodes.png" style="width: 80%">
-                    </div>
-                    <!-- </div> -->
-                    <div style="margin-bottom: 400px">
-                    </div>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h3 text-white-shadow">FPurchase</h1>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
+                    <table class="table table-striped table-bordered table-documentation"
+                        style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Field</th>
+                                <th>Type</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>PurchaseState</td>
+                                <td>int32</td>
+                                <td>
+                                    The state of the purchase.</br>
+                                    This can be 0, for an unspecified state (this should rarely occur) </br>
+                                    1, when the purchase has succesfully been processed</br>
+                                    2, when the purchase is still in a pending state.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Quantity</td>
+                                <td>int32</td>
+                                <td>
+                                    The quantity of the purchased product.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PurchaseTime</td>
+                                <td>int64</td>
+                                <td>
+                                    The time the product was purchased, in milliseconds since the epoch (Jan 1, 1970).
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>AccountIdentifiers</td>
+                                <td>FAccountIdentifiers</td>
+                                <td style="min-width: 300px">
+                                    The obfuscated account identifiers that were provided when the purchase was made.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>DeveloperPayload</td>
+                                <td>FString</td>
+                                <td>
+                                    The payload specified when the purchase was acknowledged or consumed.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>OrderId</td>
+                                <td>FString</td>
+                                <td>
+                                    The unique order identifier for the transaction.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PackageName</td>
+                                <td>FString</td>
+                                <td>
+                                    The application package from which the purchase originated.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PurchaseToken</td>
+                                <td>FString</td>
+                                <td>
+                                    A token that uniquely identifies a purchase for a given item and user pair.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Signature</td>
+                                <td>FString</td>
+                                <td>
+                                    A String containing the signature of the purchase data that was signed with the private key of the developer.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Products</td>
+                                <td>TArray&#60;FString&#62;</td>
+                                <td>
+                                    The product Ids.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>isAcknowledged</td>
+                                <td>bool</td>
+                                <td>
+                                    Indicates whether the purchase has been acknowledged.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>isAutoRenewing</td>
+                                <td>bool</td>
+                                <td>
+                                    Indicates whether the subscription renews automatically.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h3 text-white-shadow">FAccountIdentifiers</h1>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
+                    <table class="table table-striped table-bordered table-documentation"
+                        style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Field</th>
+                                <th>Type</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>ObfuscatedAccountId</td>
+                                <td>FString</td>
+                                <td style="min-width: 300px">
+                                    The obfuscated account id.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>ObfuscatedProfileId</td>
+                                <td>FString</td>
+                                <td>
+                                    The obfuscated profile id.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div style="margin-bottom: 150px">
                 </div>
             </main>
         </div>
